[gd_scene load_steps=3 format=3 uid="uid://c3p0644abxxbm"]

[ext_resource type="Texture2D" uid="uid://bucad3kf5mxvp" path="res://addons/dialogue_nodes/icons/Play.svg" id="1"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/nodes/startNode.gd" id="2"]

[node name="StartNode" type="GraphNode"]
offset_right = 180.0
offset_bottom = 60.0
title = "Start"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="RunButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Run this tree."
icon = ExtResource("1")
flat = true

[node name="IDLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "ID"

[node name="ID" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Required field.
The ID is used to identify each tree in a dialogue tree."

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="pressed" from="HBoxContainer/RunButton" to="." method="_on_run_pressed"]
[connection signal="text_changed" from="HBoxContainer/ID" to="." method="_on_ID_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
